// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package.json exports support > should build app package for both web and native targets > native-optimized 1`] = `
"import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <__TamaguiNativeView style={{"gap":18,"position":"relative","flexDirection":"column"}}>
      <__TamaguiNativeView style={{"gap":18,"position":"relative","flexDirection":"row","width":"100%","alignItems":"center"}}  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__TamaguiNativeView>

      <__TamaguiNativeView style={{"gap":18,"position":"relative","flexDirection":"row","width":"100%","alignItems":"center"}}  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__TamaguiNativeView>
    </__TamaguiNativeView>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="$shadowColor"
            transition="lazy"
            enterStyle={{ opacity: 0 }}
            exitStyle={{ opacity: 0 }}
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="$3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"position":"relative","flexDirection":"column"}}>
            <ChevronUp size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['$background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // enterStyle={{ o: 0, y: -10 }}
          // exitStyle={{ o: 0, y: 10 }}
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <__TamaguiNativeView
              style={{"right":0,"top":0,"bottom":0,"width":44,"flexDirection":"column","position":"absolute","alignItems":"center","justifyContent":"center","pointerEvents":"none"}}







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </__TamaguiNativeView>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="$3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"position":"relative","flexDirection":"column"}}>
            <ChevronDown size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', '$background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <YStack flex={1} justify="center" items="center" gap="$8" p="$4" bg="$background">
      <XStack
        position="absolute"
        width="100%"
        t="$6"
        gap="$6"
        justify="center"
        flexWrap="wrap"
        $sm={{ position: 'relative', t: 0 }}
      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </XStack>

      <SelectDemo />

      <__TamaguiNativeView style={{"gap":7,"position":"relative","flexDirection":"row"}}>
        <Button
          size="$3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__TamaguiNativeView>
      <__TamaguiNativeView style={{"gap":18,"position":"relative","flexDirection":"column"}}>
        <H1 text="center" color="$color12">
          Welcome to Tamagui.
        </H1>
        <Paragraph color="$color10" text="center">
          Here's a basic starter to show navigating from one screen to another.
        </Paragraph>
        <Separator />
        <Paragraph text="center">
          This screen uses the same code on Next.js and React Native.
        </Paragraph>
        <Separator />
      </__TamaguiNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </YStack>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="$6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay
          bg="$shadow4"
          transition="lazy"
          enterStyle={{ opacity: 0 }}
          exitStyle={{ opacity: 0 }}
        />
        <Sheet.Handle bg="$color8" />
        <Sheet.Container items="center" justify="center" gap="$10">
          <Sheet.Background bg="$color2" />
          <__TamaguiNativeView style={{"gap":7,"position":"relative","flexDirection":"row"}}>
            <Paragraph text="center">Made by</Paragraph>
            <Anchor
              color="$blue10"
              href="https://twitter.com/natebirdman"
              target="_blank"
            >
              @natebirdman,
            </Anchor>
            <Anchor
              color="$blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </__TamaguiNativeView>

          <Button
            size="$6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}

const __TamaguiNativeView = require('react-native').View;"
`;

exports[`Package.json exports support > should build app package for both web and native targets > web-css 1`] = `"._p-61757089{position:relative}._fd-375174390{flex-direction:column}._rg-1660569790{row-gap:var(--c-space-4)}._cg-800803573{column-gap:var(--c-space-4)}._p-61757089{position:relative}._fd-1565079587{flex-direction:row}._w-1887724767{width:100%}._ai-841283895{align-items:center}._rg-1660569790{row-gap:var(--c-space-4)}._cg-800803573{column-gap:var(--c-space-4)}._p-61757089{position:relative}._fd-1565079587{flex-direction:row}._w-1887724767{width:100%}._ai-841283895{align-items:center}._rg-1660569790{row-gap:var(--c-space-4)}._cg-800803573{column-gap:var(--c-space-4)}._z-10{z-index:10;}._p-61757089{position:relative}._fd-375174390{flex-direction:column}._r-0px{right:0px;}._t-0px{top:0px;}._b-0px{bottom:0px;}._fd-375174390{flex-direction:column}._p-1950652084{position:absolute}._ai-841283895{align-items:center}._jc-924415489{justify-content:center}._w-1131433371{width:var(--c-size-4)}._pe-1292264062{pointer-events:none}._z-10{z-index:10;}._p-61757089{position:relative}._fd-375174390{flex-direction:column}._grow-1{flex-grow:1;}._shrink-1{flex-shrink:1;}._p-61757089{position:relative}._fd-375174390{flex-direction:column}._fb-1617225897{flex-basis:auto}._jc-924415489{justify-content:center}._ai-841283895{align-items:center}._rg-1660569914{row-gap:var(--c-space-8)}._cg-800803697{column-gap:var(--c-space-8)}._pt-831206891{padding-top:var(--c-space-4)}._pr-1807095782{padding-right:var(--c-space-4)}._pb-327880030{padding-bottom:var(--c-space-4)}._pl-1102651972{padding-left:var(--c-space-4)}._bc-1956623045{background-color:var(--background)}._fd-1565079587{flex-direction:row}._w-1887724767{width:100%}._rg-1660569852{row-gap:var(--c-space-6)}._cg-800803635{column-gap:var(--c-space-6)}._jc-924415489{justify-content:center}._fw-290729943{flex-wrap:wrap}._p-1715368889{position:absolute}@media (min-width: 640px) {._p-1715368889{position:relative}}._t-284611538{top:var(--c-space-6)}@media (min-width: 640px) {._t-284611538{top:0px}}._p-61757089{position:relative}._fd-1565079587{flex-direction:row}._rg-1660569728{row-gap:var(--c-space-2)}._cg-800803511{column-gap:var(--c-space-2)}._p-61757089{position:relative}._fd-375174390{flex-direction:column}._rg-1660569790{row-gap:var(--c-space-4)}._cg-800803573{column-gap:var(--c-space-4)}._mt-0px{margin-top:0px;}._mr-0px{margin-right:0px;}._mb-0px{margin-bottom:0px;}._ml-0px{margin-left:0px;}._us-1558742393{user-select:auto}._ws-1809751303{white-space:normal}._tt-851588957{text-transform:var(--f-transform-10)}._ff-654448191{font-family:var(--f-family)}._fw-212581644{font-weight:var(--f-weight-10)}._ls-134166004{letter-spacing:var(--f-letterSpacing-10)}._fs-1862915281{font-size:var(--f-size-10)}._lh-1734572330{line-height:var(--f-lineHeight-10)}._ta-87024376{text-align:center}._c-159158635{color:var(--color12)}._us-1558742393{user-select:auto}._ff-654448191{font-family:var(--f-family)}._fw-1365427886{font-weight:var(--f-weight-4)}._ls-1412165108{letter-spacing:var(--f-letterSpacing-4)}._fs-720666993{font-size:var(--f-size-4)}._lh-1166494196{line-height:var(--f-lineHeight-4)}._ws-1809751303{white-space:normal}._c-159158697{color:var(--color10)}._ta-87024376{text-align:center}._shrink-1{flex-shrink:1;}._btw-0px._btw-0px{border-top-width:0px;}._brw-0px._brw-0px{border-right-width:0px;}._borderBottomWidth-1px._borderBottomWidth-1px{border-bottom-width:1px;}._borderLeftWidth-0px._borderLeftWidth-0px{border-left-width:0px;}._grow-1{flex-grow:1;}._height-0px{height:0px;}._maxH-0px{max-height:0px;}._bbs-solid._bbs-solid{border-bottom-style:solid;}._bts-solid._bts-solid{border-top-style:solid;}._bls-solid._bls-solid{border-left-style:solid;}._brs-solid._brs-solid{border-right-style:solid;}._fb-1617225897{flex-basis:auto}._ty-1638430977{--t-y:-0.5px}._t-785692220{translate:var(--t-x, 0px) var(--t-y, 0px)}._btc-879597563{border-top-color:var(--backgroundFocus)}._brc-1351160484{border-right-color:var(--backgroundFocus)}._bbc-464697364{border-bottom-color:var(--backgroundFocus)}._blc-499015114{border-left-color:var(--backgroundFocus)}._us-1558742393{user-select:auto}._ff-654448191{font-family:var(--f-family)}._fw-1365427886{font-weight:var(--f-weight-4)}._ls-1412165108{letter-spacing:var(--f-letterSpacing-4)}._fs-720666993{font-size:var(--f-size-4)}._lh-1166494196{line-height:var(--f-lineHeight-4)}._c-1386370200{color:var(--color)}._ws-1809751303{white-space:normal}._ta-87024376{text-align:center}._shrink-1{flex-shrink:1;}._btw-0px._btw-0px{border-top-width:0px;}._brw-0px._brw-0px{border-right-width:0px;}._borderBottomWidth-1px._borderBottomWidth-1px{border-bottom-width:1px;}._borderLeftWidth-0px._borderLeftWidth-0px{border-left-width:0px;}._grow-1{flex-grow:1;}._height-0px{height:0px;}._maxH-0px{max-height:0px;}._bbs-solid._bbs-solid{border-bottom-style:solid;}._bts-solid._bts-solid{border-top-style:solid;}._bls-solid._bls-solid{border-left-style:solid;}._brs-solid._brs-solid{border-right-style:solid;}._fb-1617225897{flex-basis:auto}._ty-1638430977{--t-y:-0.5px}._t-785692220{translate:var(--t-x, 0px) var(--t-y, 0px)}._btc-879597563{border-top-color:var(--backgroundFocus)}._brc-1351160484{border-right-color:var(--backgroundFocus)}._bbc-464697364{border-bottom-color:var(--backgroundFocus)}._blc-499015114{border-left-color:var(--backgroundFocus)}._p-61757089{position:relative}._fd-1565079587{flex-direction:row}._rg-1660569728{row-gap:var(--c-space-2)}._cg-800803511{column-gap:var(--c-space-2)}._us-1558742393{user-select:auto}._ff-654448191{font-family:var(--f-family)}._fw-1365427886{font-weight:var(--f-weight-4)}._ls-1412165108{letter-spacing:var(--f-letterSpacing-4)}._fs-720666993{font-size:var(--f-size-4)}._lh-1166494196{line-height:var(--f-lineHeight-4)}._c-1386370200{color:var(--color)}._ws-1809751303{white-space:normal}._ta-87024376{text-align:center}"`;

exports[`Package.json exports support > should build app package for both web and native targets > web-optimized 1`] = `
"import "./_screen.css"
import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <div className="is_View _p-61757089 _fd-375174390 _rg-1660569790 _cg-800803573">
      <div className="is_View _p-61757089 _fd-1565079587 _w-1887724767 _ai-841283895 _rg-1660569790 _cg-800803573"  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className="is_View _p-61757089 _fd-1565079587 _w-1887724767 _ai-841283895 _rg-1660569790 _cg-800803573"  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="$shadowColor"
            transition="lazy"
            enterStyle={{ opacity: 0 }}
            exitStyle={{ opacity: 0 }}
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="$3"
        >
          <div className="is_View _z-10 _p-61757089 _fd-375174390">
            <ChevronUp size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['$background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // enterStyle={{ o: 0, y: -10 }}
          // exitStyle={{ o: 0, y: 10 }}
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <div
              className="is_View _r-0px _t-0px _b-0px _fd-375174390 _p-1950652084 _ai-841283895 _jc-924415489 _w-1131433371 _pe-1292264062"







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </div>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="$3"
        >
          <div className="is_View _z-10 _p-61757089 _fd-375174390">
            <ChevronDown size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', '$background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <div className="is_View _grow-1 _shrink-1 _p-61757089 _fd-375174390 _fb-1617225897 _jc-924415489 _ai-841283895 _rg-1660569914 _cg-800803697 _pt-831206891 _pr-1807095782 _pb-327880030 _pl-1102651972 _bc-1956623045"     >
      <div
        className="is_View _fd-1565079587 _w-1887724767 _rg-1660569852 _cg-800803635 _jc-924415489 _fw-290729943 _p-1715368889 _t-284611538"






      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </div>

      <SelectDemo />

      <div className="is_View _p-61757089 _fd-1565079587 _rg-1660569728 _cg-800803511">
        <Button
          size="$3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className="is_View _p-61757089 _fd-375174390 _rg-1660569790 _cg-800803573">
        <h1 className="is_H1 is_Text font_heading _mt-0px _mr-0px _mb-0px _ml-0px _us-1558742393 _ws-1809751303 _tt-851588957 _ff-654448191 _fw-212581644 _ls-134166004 _fs-1862915281 _lh-1734572330 _ta-87024376 _c-159158635" >
          Welcome to Tamagui.
        </h1>
        <p className="is_Paragraph is_Text font_body _us-1558742393 _ff-654448191 _fw-1365427886 _ls-1412165108 _fs-720666993 _lh-1166494196 _ws-1809751303 _c-159158697 _ta-87024376" >
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _fb-1617225897 _ty-1638430977 _t-785692220 _btc-879597563 _brc-1351160484 _bbc-464697364 _blc-499015114" />
        <p className="is_Paragraph is_Text font_body _us-1558742393 _ff-654448191 _fw-1365427886 _ls-1412165108 _fs-720666993 _lh-1166494196 _c-1386370200 _ws-1809751303 _ta-87024376">
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _fb-1617225897 _ty-1638430977 _t-785692220 _btc-879597563 _brc-1351160484 _bbc-464697364 _blc-499015114" />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="$6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay
          bg="$shadow4"
          transition="lazy"
          enterStyle={{ opacity: 0 }}
          exitStyle={{ opacity: 0 }}
        />
        <Sheet.Handle bg="$color8" />
        <Sheet.Container items="center" justify="center" gap="$10">
          <Sheet.Background bg="$color2" />
          <div className="is_View _p-61757089 _fd-1565079587 _rg-1660569728 _cg-800803511">
            <p className="is_Paragraph is_Text font_body _us-1558742393 _ff-654448191 _fw-1365427886 _ls-1412165108 _fs-720666993 _lh-1166494196 _c-1386370200 _ws-1809751303 _ta-87024376">Made by</p>
            <Anchor
              color="$blue10"
              href="https://twitter.com/natebirdman"
              target="_blank"
            >
              @natebirdman,
            </Anchor>
            <Anchor
              color="$blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </div>

          <Button
            size="$6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}
"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > native-optimized-single 1`] = `
"import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <__TamaguiNativeView style={{"gap":18,"position":"relative","flexDirection":"column"}}>
      <__TamaguiNativeView style={{"gap":18,"position":"relative","flexDirection":"row","width":"100%","alignItems":"center"}}  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__TamaguiNativeView>

      <__TamaguiNativeView style={{"gap":18,"position":"relative","flexDirection":"row","width":"100%","alignItems":"center"}}  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__TamaguiNativeView>
    </__TamaguiNativeView>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="$shadowColor"
            transition="lazy"
            enterStyle={{ opacity: 0 }}
            exitStyle={{ opacity: 0 }}
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="$3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"position":"relative","flexDirection":"column"}}>
            <ChevronUp size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['$background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // enterStyle={{ o: 0, y: -10 }}
          // exitStyle={{ o: 0, y: 10 }}
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <__TamaguiNativeView
              style={{"right":0,"top":0,"bottom":0,"width":44,"flexDirection":"column","position":"absolute","alignItems":"center","justifyContent":"center","pointerEvents":"none"}}







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </__TamaguiNativeView>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="$3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"position":"relative","flexDirection":"column"}}>
            <ChevronDown size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', '$background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <YStack flex={1} justify="center" items="center" gap="$8" p="$4" bg="$background">
      <XStack
        position="absolute"
        width="100%"
        t="$6"
        gap="$6"
        justify="center"
        flexWrap="wrap"
        $sm={{ position: 'relative', t: 0 }}
      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </XStack>

      <SelectDemo />

      <__TamaguiNativeView style={{"gap":7,"position":"relative","flexDirection":"row"}}>
        <Button
          size="$3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__TamaguiNativeView>
      <__TamaguiNativeView style={{"gap":18,"position":"relative","flexDirection":"column"}}>
        <H1 text="center" color="$color12">
          Welcome to Tamagui.
        </H1>
        <Paragraph color="$color10" text="center">
          Here's a basic starter to show navigating from one screen to another.
        </Paragraph>
        <Separator />
        <Paragraph text="center">
          This screen uses the same code on Next.js and React Native.
        </Paragraph>
        <Separator />
      </__TamaguiNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </YStack>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="$6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay
          bg="$shadow4"
          transition="lazy"
          enterStyle={{ opacity: 0 }}
          exitStyle={{ opacity: 0 }}
        />
        <Sheet.Handle bg="$color8" />
        <Sheet.Container items="center" justify="center" gap="$10">
          <Sheet.Background bg="$color2" />
          <__TamaguiNativeView style={{"gap":7,"position":"relative","flexDirection":"row"}}>
            <Paragraph text="center">Made by</Paragraph>
            <Anchor
              color="$blue10"
              href="https://twitter.com/natebirdman"
              target="_blank"
            >
              @natebirdman,
            </Anchor>
            <Anchor
              color="$blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </__TamaguiNativeView>

          <Button
            size="$6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}

const __TamaguiNativeView = require('react-native').View;"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > web-optimized-single 1`] = `
"import "./_screen.css"
import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <div className="is_View _p-61757089 _fd-375174390 _rg-1660569790 _cg-800803573">
      <div className="is_View _p-61757089 _fd-1565079587 _w-1887724767 _ai-841283895 _rg-1660569790 _cg-800803573"  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className="is_View _p-61757089 _fd-1565079587 _w-1887724767 _ai-841283895 _rg-1660569790 _cg-800803573"  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="$shadowColor"
            transition="lazy"
            enterStyle={{ opacity: 0 }}
            exitStyle={{ opacity: 0 }}
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="$3"
        >
          <div className="is_View _z-10 _p-61757089 _fd-375174390">
            <ChevronUp size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['$background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // enterStyle={{ o: 0, y: -10 }}
          // exitStyle={{ o: 0, y: 10 }}
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <div
              className="is_View _r-0px _t-0px _b-0px _fd-375174390 _p-1950652084 _ai-841283895 _jc-924415489 _w-1131433371 _pe-1292264062"







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </div>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="$3"
        >
          <div className="is_View _z-10 _p-61757089 _fd-375174390">
            <ChevronDown size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', '$background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <div className="is_View _grow-1 _shrink-1 _p-61757089 _fd-375174390 _fb-1617225897 _jc-924415489 _ai-841283895 _rg-1660569914 _cg-800803697 _pt-831206891 _pr-1807095782 _pb-327880030 _pl-1102651972 _bc-1956623045"     >
      <div
        className="is_View _fd-1565079587 _w-1887724767 _rg-1660569852 _cg-800803635 _jc-924415489 _fw-290729943 _p-1715368889 _t-284611538"






      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </div>

      <SelectDemo />

      <div className="is_View _p-61757089 _fd-1565079587 _rg-1660569728 _cg-800803511">
        <Button
          size="$3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className="is_View _p-61757089 _fd-375174390 _rg-1660569790 _cg-800803573">
        <h1 className="is_H1 is_Text font_heading _mt-0px _mr-0px _mb-0px _ml-0px _us-1558742393 _ws-1809751303 _tt-851588957 _ff-654448191 _fw-212581644 _ls-134166004 _fs-1862915281 _lh-1734572330 _ta-87024376 _c-159158635" >
          Welcome to Tamagui.
        </h1>
        <p className="is_Paragraph is_Text font_body _us-1558742393 _ff-654448191 _fw-1365427886 _ls-1412165108 _fs-720666993 _lh-1166494196 _ws-1809751303 _c-159158697 _ta-87024376" >
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _fb-1617225897 _ty-1638430977 _t-785692220 _btc-879597563 _brc-1351160484 _bbc-464697364 _blc-499015114" />
        <p className="is_Paragraph is_Text font_body _us-1558742393 _ff-654448191 _fw-1365427886 _ls-1412165108 _fs-720666993 _lh-1166494196 _c-1386370200 _ws-1809751303 _ta-87024376">
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _fb-1617225897 _ty-1638430977 _t-785692220 _btc-879597563 _brc-1351160484 _bbc-464697364 _blc-499015114" />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="$6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay
          bg="$shadow4"
          transition="lazy"
          enterStyle={{ opacity: 0 }}
          exitStyle={{ opacity: 0 }}
        />
        <Sheet.Handle bg="$color8" />
        <Sheet.Container items="center" justify="center" gap="$10">
          <Sheet.Background bg="$color2" />
          <div className="is_View _p-61757089 _fd-1565079587 _rg-1660569728 _cg-800803511">
            <p className="is_Paragraph is_Text font_body _us-1558742393 _ff-654448191 _fw-1365427886 _ls-1412165108 _fs-720666993 _lh-1166494196 _c-1386370200 _ws-1809751303 _ta-87024376">Made by</p>
            <Anchor
              color="$blue10"
              href="https://twitter.com/natebirdman"
              target="_blank"
            >
              @natebirdman,
            </Anchor>
            <Anchor
              color="$blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </div>

          <Button
            size="$6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}
"
`;
